core/keyrx_ffi_macro/tests/ui/fail_empty_domain.stderr
error: domain cannot be empty
 --> tests/ui/fail_empty_domain.rs:7:22
  |
7 | #[keyrx_ffi(domain = "")]
  |                      ^^
